FilesDelta - prefer NIO
GitOrigin-RevId: 8836ca9ccedc80cd7c67bc511c579a6a3af85ab9